tests/machine/x/zig/list_nested_assign.error
Error on line 7: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/list_nested_assign.zig:7:12: error: no member named 'items' in '[]const []const i32'

6:     matrix = &[_][]const i32{ &[_]i32{ @as(i32, @intCast(1)), @as(i32, @intCast(2)) }, &[_]i32{ @as(i32, @intCast(3)), @as(i32, @intCast(4)) } };
7:     matrix.items[@as(i32, @intCast(1))][@as(i32, @intCast(0))] = @as(i32, @intCast(5));
8:     std.debug.print("{any}\n", .{matrix[@as(i32, @intCast(1))][@as(i32, @intCast(0))]});
